Fixing alignment of header

--- a/components/DependenciesContainer.module.css
+++ b/components/DependenciesContainer.module.css
@@ -6,7 +6,7 @@ div.sectionContainer {
   background-color: var(--colour-container-background);
   box-shadow: var(--main-section-boxshadow);
   border-radius: var(--main-section-border-radius);
-  padding: 2rem 3.125rem 3.75rem 3.125rem;
+  padding: 2.5rem 3.125rem 3.75rem 3.125rem;
   margin: 1.1rem;
   box-sizing: border-box;
   font-family: var(--primary-font-family);
