--- a/components/SummaryContainer.module.css
+++ b/components/SummaryContainer.module.css
@@ -46,8 +46,8 @@ div.smallSharedCompProps {
 
 div.summaryComponent {
   display: block;
-  max-height: 100%;
-  /* height: 410px; */
+  /* max-height: 100%; */
+  min-height: 410px;
   background-color: var(--colour-lightGrey);
   box-sizing: border-box;
   margin-top: 1rem;
@@ -65,8 +65,8 @@ div.summaryStyle div.container {
   flex-wrap: wrap;
   width: 100%;
   justify-content: space-between;
-  margin-top: 1rem;
-  margin-bottom: 0.5rem;
+  margin-top: 0rem;
+  margin-bottom: 0rem;
 }
 
 h3.summaryStylePercent {
@@ -90,9 +90,9 @@ div.summaryComponent div.summaryCompHeader {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   margin-top: 0.5rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.813rem;
   width: 100%;
 }
 
